--- a/resume.html
+++ b/resume.html
@@ -1,64 +1,78 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Cory Roberts Resume</title>
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+<head>
+  <meta charset="utf-8">
+  <title>Cory Roberts Resume</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Cory Roberts Resume</a>
       <div class="navbar-header navbar-right">
         <a href="index.html"><button type="button" class="btn btn-default navbar-btn">Home</button></a>
-        <a href="resume.html" class="active"><button type="button" class="btn btn-default navbar-btn">Resume</button></a>
+        <a href="resume.html"><button type="button" class="btn btn-default navbar-btn">Resume</button></a>
         <a href="my-work.html"><button type="button" class="btn btn-default navbar-btn">My Work</button></a>
       </div>
     </div>
   </nav>
-<main>
-  <strong>Looking to Become a Web Developer</strong> <br>
-  Granbury, TX 76049 <br>
-  corythecoder@gmail.com <br>
-  (817)565-7115 <br>
-  <h2>Work Experience</h2>
-  <strong>Walmart Stocker</strong> <br>
-  Walmart - Granbury, TX <br>
-  April 2014 to October 2021
-  <ul>
-    <li>Stock Shelves</li>
-    <li>Customer Service</li>
-    <li>Unload Trucks</li>
-    <li>Clean Area</li>
-    <li>Make Bales</li>
-  </ul>
-  <strong>Dairy Clerk</strong> <br>
-  Kroger - Granbury, TX <br>
-  October 2021 to June 2022
-  <ul>
-    <li>Stock Shelves</li>
-    <li>Customer Service</li>
-    <li>Unload Trucks</li>
-    <li>Clean Area</li>
-    <li>Make Bales</li>
-  </ul>
-  <h2>Education</h2>
-  Weatherford High School - Weatherford, TX <br>
-  2006 - 2009 <br>
-  <h2>Skills Related to my Desired Career Path</h2>
-  <ul>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Bootstrap</li>
-    <li>JavaScript</li>
-    <li>jQuery</li>
-  </ul>
-<footer>
-  &raquo; <a href="index.html">Back Home</a> <br>
-  &copy; Copyright Cory Roberts, 2022
-</footer>
-  </body>
+  <main>
+    <strong>Looking to Become a Web Developer</strong> <br>
+    Granbury, TX 76049 <br>
+    corythecoder@gmail.com <br>
+    (817)565-7115 <br>
+    <div class="panel panel-primary">
+      <div class="panel-heading">Work Experience</div>
+      <div class="panel-body">
+        <strong>Walmart Stocker</strong> <br>
+        Walmart - Granbury, TX <br>
+        April 2014 to October 2021
+        <ul>
+          <li>Stock Shelves</li>
+          <li>Customer Service</li>
+          <li>Unload Trucks</li>
+          <li>Clean Area</li>
+          <li>Make Bales</li>
+        </ul>
+        <strong>Dairy Clerk</strong> <br>
+        Kroger - Granbury, TX <br>
+        October 2021 to June 2022
+        <ul>
+          <li>Stock Shelves</li>
+          <li>Customer Service</li>
+          <li>Unload Trucks</li>
+          <li>Clean Area</li>
+          <li>Make Bales</li>
+        </ul>
+      </div>
+    </div>
+    <div class="panel panel-primary">
+      <div class="panel-heading">Education</div>
+      <div class="panel-body">
+        Weatherford High School - Weatherford, TX <br>
+        2006 - 2009
+      </div>
+    </div>
+    <div class="panel panel-primary">
+      <div class="panel-heading">Skills Related to my Desired Career Path</div>
+      <div class="panel-body">
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Bootstrap</li>
+          <li>JavaScript</li>
+          <li>jQuery</li>
+        </ul>
+      </div>
+    </div>
+    <footer>
+      &copy; Copyright Cory Roberts, 2022
+    </footer>
+</body>
+
 </html>
