--- a/my-work.html
+++ b/my-work.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Cory Roberts Portfolio</a>
+      <span  class="navbar-brand">Cory Roberts Portfolio</span>
       <div class="navbar-header navbar-right">
         <a href="index.html"><button type="button" class="btn btn-default navbar-btn">Home</button></a>
         <a href="resume.html"><button type="button" class="btn btn-default navbar-btn">Resume</button></a>
