--- a/my-work.html
+++ b/my-work.html
@@ -51,19 +51,18 @@
     </div>
     <div class="panel panel-primary">
       <div class="panel-heading">Custom Work</div>
-      <div class="panel-body">
-        <p>
+      <div class="panel-body" style="display: flex; flex-wrap: wrap" <div>
         <h4>Vanilla JavaScript To-Do List</h4>
         <div id="to-do-list" style="border: 1px solid #1363DF; padding: 10px; width: 25%">
           <div style="text-align: right"><a href="javascript: void(0)" id="add-to-do" style="margin: 0 auto">Add a To-Do</a></div>
           <div id="contents"></div>
         </div>
-        </p>
-        <p>
+      </div>
+      <div>
         <h4>Vanilla JavaScript Pop-Outs</h4>
         <div id="pop-outs"><a href="javascript: void(0)">Pop-Out 1</a> - <a href="javascript: void(0)">Pop-Out 2</a> - <a href="javascript: void(0)">Pop-Out 3</a></div>
-        </p>
-        <p>
+      </div>
+      <div>
         <h4>Vanilla JavaScript Timer</h4>
         <div id="timer">
           <input type="button" name="start" value="Start Timer">
@@ -71,8 +70,8 @@
           <input type="button" name="restart" value="Restart Timer">
           <span id="results"></span>
         </div>
-        </p>
       </div>
+    </div>
     </div>
   </main>
   <footer>
