--- a/my-work.html
+++ b/my-work.html
@@ -51,7 +51,8 @@
     </div>
     <div class="panel panel-primary">
       <div class="panel-heading">Custom Work</div>
-      <div class="panel-body" style="display: flex; flex-wrap: wrap" <div>
+      <div class="panel-body" style="display: flex; flex-wrap: wrap">
+        <div>
         <h4>Vanilla JavaScript To-Do List</h4>
         <div id="to-do-list" style="border: 1px solid #1363DF; padding: 10px; width: 25%">
           <div style="text-align: right"><a href="javascript: void(0)" id="add-to-do" style="margin: 0 auto">Add a To-Do</a></div>
