--- a/my-work.html
+++ b/my-work.html
@@ -51,7 +51,7 @@
     </div>
     <div class="panel panel-primary">
       <div class="panel-heading">Custom Work</div>
-      <div class="panel-body" style="display: flex; flex-wrap: wrap">
+      <div class="panel-body" style="display: flex; flex-wrap: wrap; justify-content: space-between">
         <div>
         <h4>Vanilla JavaScript To-Do List</h4>
         <div id="to-do-list" style="border: 1px solid #1363DF; padding: 10px; width: 25%">
