--- a/my-work.html
+++ b/my-work.html
@@ -54,7 +54,7 @@
       <div class="panel-body" style="display: flex; flex-wrap: wrap; justify-content: space-between">
         <div>
         <h4>Vanilla JavaScript To-Do List</h4>
-        <div id="to-do-list" style="border: 1px solid #1363DF; padding: 10px; width: 25%">
+        <div id="to-do-list" style="border: 1px solid #1363DF; padding: 10px">
           <div style="text-align: right"><a href="javascript: void(0)" id="add-to-do" style="margin: 0 auto">Add a To-Do</a></div>
           <div id="contents"></div>
         </div>
