--- a/my-work.html
+++ b/my-work.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <span class="navbar-brand">Cory Roberts Work/span>
+      <span class="navbar-brand">Cory Roberts Work</span>
       <div class="navbar-header navbar-right">
         <a href="index.html"><button type="button" class="btn btn-default navbar-btn">Home</button></a>
         <a href="resume.html"><button type="button" class="btn btn-default navbar-btn">Resume</button></a>
@@ -66,9 +66,9 @@
       <div>
         <h4>Vanilla JavaScript Timer</h4>
         <div id="timer">
-          <input type="button" name="start" value="Start Timer">
-          <input type="button" name="stop" value="Stop Timer">
-          <input type="button" name="restart" value="Restart Timer">
+          <input type="button" name="start" value="Start Timer" class="btn btn-default">
+          <input type="button" name="stop" value="Stop Timer" class="btn btn-default">
+          <input type="button" name="restart" value="Restart Timer" class="btn btn-default">
           <span id="results"></span>
         </div>
       </div>
