--- a/my-work.html
+++ b/my-work.html
@@ -49,9 +49,9 @@
         </ul>
       </div>
     </div>
-    <div class="panel panel-primary">
+    <div class="panel panel-primary" id="custom-work">
       <div class="panel-heading">Custom Work</div>
-      <div class="panel-body" style="display: flex; flex-wrap: wrap; justify-content: space-between">
+      <div class="panel-body">
         <div>
         <h4>Vanilla JavaScript To-Do List</h4>
         <div id="to-do-list" style="border: 1px solid #1363DF; padding: 10px">
