--- a/my-work.html
+++ b/my-work.html
@@ -54,8 +54,8 @@
       <div class="panel-body">
         <div>
         <h4>Vanilla JavaScript To-Do List</h4>
-        <div id="to-do-list" style="border: 1px solid #1363DF; padding: 10px">
-          <div style="text-align: right"><a href="javascript: void(0)" id="add-to-do" style="margin: 0 auto">Add a To-Do</a></div>
+        <div id="to-do-list">
+          <div><a href="javascript: void(0)" id="add-to-do">Add a To-Do</a></div>
           <div id="contents"></div>
         </div>
       </div>
