--- a/resume.html
+++ b/resume.html
@@ -62,11 +62,11 @@
       <div class="panel-heading">Skills Related to my Desired Career Path</div>
       <div class="panel-body">
         <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Bootstrap</li>
-          <li>JavaScript</li>
-          <li>jQuery</li>
+          <li>HTML - 10+ Years</li>
+          <li>CSS - 10+ Years</li>
+          <li>Bootstrap - Less Than a Year</li>
+          <li>JavaScript - 5+ Years</li>
+          <li>jQuery - 5+ Years</li>
         </ul>
       </div>
     </div>
