--- a/my-work.html
+++ b/my-work.html
@@ -71,6 +71,25 @@
           <input type="button" name="restart" value="Restart Timer" class="btn btn-default">
           <span id="results"></span>
         </div>
+        <h4>Vanilla JavaScript Calculator</h4>
+        <div id="calculator">
+          <input type="button" value="7" class="btn">
+          <input type="button" value="8" class="btn">
+          <input type="button" value="9" class="btn">
+          <input type="button" value="/" class="btn">
+          <input type="button" value="4" class="btn">
+          <input type="button" value="5" class="btn">
+          <input type="button" value="6" class="btn">
+          <input type="button" value="*" class="btn">
+          <input type="button" value="1" class="btn">
+          <input type="button" value="2" class="btn">
+          <input type="button" value="3" class="btn">
+          <input type="button" value="-" class="btn">
+          <input type="button" value="0" class="btn">
+          <input type="button" value="=" class="btn">
+          <input type="button" value="+" class="btn">
+          <input type="button" value="C" class="btn">
+        </div>
       </div>
     </div>
     </div>
