--- a/my-work.html
+++ b/my-work.html
@@ -71,6 +71,8 @@
           <input type="button" name="restart" value="Restart Timer" class="btn btn-default">
           <span id="results"></span>
         </div>
+        </div>
+        <div>
         <h4>Vanilla JavaScript Calculator</h4>
         <div id="calculator">
           <input type="text" name="results" readonly value="0">
@@ -92,7 +94,6 @@
           <input type="button" value="+" class="btn">
         </div>
       </div>
-    </div>
     </div>
   </main>
   <footer>
