--- a/my-work.html
+++ b/my-work.html
@@ -103,6 +103,7 @@
   <script src="to_do.js"></script>
   <script src="pop_outs.js"></script>
   <script src="timer.js"></script>
+  <script src="calculator.js"></script>
 </body>
 
 </html>
