--- a/my-work.html
+++ b/my-work.html
@@ -75,7 +75,7 @@
         <div>
         <h4>Vanilla JavaScript Calculator</h4>
         <div id="calculator">
-          <input type="text" name="results" readonly value="0">
+          <input type="text" name="results" readonly>
           <input type="button" value="7" class="btn">
           <input type="button" value="8" class="btn">
           <input type="button" value="9" class="btn">
