--- a/my-work.html
+++ b/my-work.html
@@ -90,7 +90,7 @@
           <input type="button" value="-" class="btn">
           <input type="button" value="0" class="btn">
           <input type="button" value="C" class="btn">
-          <input type="button" value="=" class="btn">
+          <input type="button" value="=" class="btn equals">
           <input type="button" value="+" class="btn">
         </div>
       </div>
