--- a/my-work.html
+++ b/my-work.html
@@ -83,7 +83,7 @@
           <input type="button" value="4" class="btn">
           <input type="button" value="5" class="btn">
           <input type="button" value="6" class="btn">
-          <input type="button" value="*" class="btn">
+          <input type="button" value="X" class="btn">
           <input type="button" value="1" class="btn">
           <input type="button" value="2" class="btn">
           <input type="button" value="3" class="btn">
