--- a/my-work.html
+++ b/my-work.html
@@ -87,7 +87,7 @@
           <input type="button" value="1" class="btn">
           <input type="button" value="2" class="btn">
           <input type="button" value="3" class="btn">
-          <input type="button" value="-" class="btn">
+          <input type="button" value="−" class="btn">
           <input type="button" value="0" class="btn">
           <input type="button" value="C" class="btn">
           <input type="button" value="=" class="btn equals">
