--- a/my-work.html
+++ b/my-work.html
@@ -106,6 +106,7 @@
   <script src="pop_outs.js"></script>
   <script src="timer.js"></script>
   <script src="calculator.js"></script>
+  <script src="calendar.js"></script>
 </body>
 
 </html>
