--- a/my-work.html
+++ b/my-work.html
@@ -93,8 +93,10 @@
           <input type="button" value="=" class="btn equals">
           <input type="button" value="+" class="btn">
         </div>
+          <div>
           <h4>Vanilla JavaScript Calendar</h4>
           <div id="calendar"></div>
+          </div>
       </div>
     </div>
     </div>
