--- a/resume.html
+++ b/resume.html
@@ -24,8 +24,7 @@
   <main>
     <strong>Looking to Become a Web Developer</strong> <br>
     Granbury, TX 76049 <br>
-    corythecoder@gmail.com <br>
-    (817)565-7115 <br><br>
+    corythecoder@gmail.com <br><br>
     <div class="panel panel-primary">
       <div class="panel-heading">Work Experience</div>
       <div class="panel-body">
