--- a/resume.html
+++ b/resume.html
@@ -67,6 +67,7 @@
           <li>JavaScript - 5+ Years</li>
           <li>jQuery - 5+ Years</li>
           <li>Basic Node.js - Less Than a Year</li>
+          <li>Git & GitHub - Less Than a Year</li>
         </ul>
       </div>
     </div>
