--- a/resume.html
+++ b/resume.html
@@ -68,6 +68,7 @@
           <li>jQuery - 5+ Years</li>
           <li>Basic Node.js - Less Than a Year</li>
           <li>Git & GitHub - Less Than a Year</li>
+          <li>Visual Studio Code - Less Than a Year</li>
         </ul>
       </div>
     </div>
