--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,8 @@
   <main>
     <strong>Looking to Become a Web Developer</strong> <br>
     Granbury, TX 76049 <br>
-    corythecoder@gmail.com <br><br>
+    corythecoder@gmail.com <br>
+    Willing to work weekends and holidays. <br><br>
     <div class="panel panel-primary">
       <div class="panel-heading">Work Experience</div>
       <div class="panel-body">
@@ -32,7 +33,7 @@
         Walmart - Granbury, TX <br>
         April 2014 to October 2021
         <ul>
-          <li>Stock Shelves</li>
+          <li>Stock Shelves Around The Whole Store</li>
           <li>Customer Service</li>
           <li>Unload Trucks</li>
           <li>Clean Area</li>
