--- a/resume.html
+++ b/resume.html
@@ -49,6 +49,15 @@
           <li>Clean Area</li>
           <li>Make Bales</li>
         </ul>
+        <strong>Replenishment Team</strong> <br>
+        Michaels - Granbury, TX <br>
+        March 2023 to Present
+        <ul>
+          <li>Stock Shelves</li>
+          <li>Customer Service</li>
+          <li>Unload Trucks</li>
+          <li>Clean Area</li>
+        </ul>
       </div>
     </div>
     <div class="panel panel-primary">
@@ -67,10 +76,6 @@
           <li>Bootstrap - Less Than a Year</li>
           <li>JavaScript - 5+ Years</li>
           <li>jQuery - 5+ Years</li>
-          <li>Basic Node.js - Less Than a Year</li>
-          <li>EJS - Less Than a Year</li>
-          <li>Git & GitHub - Less Than a Year</li>
-          <li>Visual Studio Code - Less Than a Year</li>
         </ul>
       </div>
     </div>
