--- a/index.html
+++ b/index.html
@@ -23,24 +23,27 @@
   </nav>
   <main>
     <p>
-      Hello, my name is Cory Roberts. I've been in web development for over a decade. All of my web development expertise has mainly been used on message board services. I've been a part of two major message board services (ZetaBoards and Jcink),
-      offering support and coding assistance/resources for a very long time. I'm wanting to pursue an actual career in web development.
+      Hello, my name is Cory Roberts. I've been in web development for over a decade. All my web development expertise has mainly been used on message board services. I've been a part of two major message board services (ZetaBoards and Jcink),
+      offering support and coding assistance/resources for a very long time. I want to pursue an actual career in web development.
     </p>
     <hr>
     <div class="panel panel-primary">
       <div class="panel-heading">About Me</div>
       <div class="panel-body">
         <p>
-          I've been working in the food and retail industry all of my life and I'm looking for a change in career path.
+          I've been working in the food and retail industry all my life and I'm looking for a change in career path.
         </p>
         <p>
           I have two siblings, a brother and a sister. I'm the middle child. My brother lives with our parents, as do I. My sister has a place of her own.
         </p>
         <p>
-          I have lived in Granbury, TX since 2014, before that I lived in Weatherford, TX all of my life. I graduated from Weatherford High School in 2009.
+          I have lived in Granbury, TX since 2014, before that I lived in Weatherford, TX all my life. I graduated from Weatherford High School in 2009.
         </p>
         <p>
-          As a child, I admired construction vehicles and dreamed to become a construction worker when I grew up. As a teen, I started getting involved with the internet and coding and admired and started having a passion for what I did.
+          As a child, I admired construction vehicles and dreamed of becoming a construction worker when I grew up. As a teen, I started getting involved with the internet and coding and admired and started having a passion for what I did.
+        </p>
+        <p>
+          I am 34 years old.
         </p>
       </div>
     </div>
@@ -51,7 +54,6 @@
           <li>Coding</li>
           <li>Yu-Gi-Oh TCG</li>
           <li>Hard Rock & Metal</li>
-          <li>Statuettes</li>
           <li>Fantasy Media</li>
           <li>Pokemon GO</li>
           <li>Call of Duty</li>
@@ -68,7 +70,7 @@
     </div>
   </main>
   <footer>
-    &copy; Copyright Cory Roberts, 2022</footer>
+    &copy; Copyright Cory Roberts, 2024</footer>
 </body>
 
 </html>
